Refactor Java ot use parametrized tests for IP address (TLS and non-TLS)
Signed-off-by: currantw <taylor.curran@improving.com>